--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-*, *::before, *::after{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+.container{
+    min-height: 100vh;
+    display: flex;
+    width: 100%;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-    
+.aside{
+    flex-basis: 15%;
+    background-color: #00a9ec; 
+}
+
+.main{
+    flex: 1;
+    background-color: #ecf0f3;
 }
