--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,35 @@
 .container{
     min-height: 100vh;
     display: flex;
+    justify-content: flex-end;
     width: 100%;
 }
 
 .aside{
-    flex-basis: 15%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 15%;
     background-color: #00a9ec; 
+    z-index: 998;
 }
 
 .main{
-    flex: 1;
+    width: 85%;
     background-color: #ecf0f3;
+    padding-bottom: 50px;
+}
+
+.popup{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    background-color: rgba(58, 56, 56, 0.8);
 }
